# kni_webapp

./: .dockerignore  .env  .env.coolify.example  .env.dev  .env.development  .env.docker  .env.dokploy  .env.example  .env.local  .env.local.example  .env.localprod  .env.localprod.clean  .env.localprod.withdata  .env.prod  .env.production  .gitignore  .mcp.toml  ACCESSIBILITY_TESTING.md  COMPREHENSIVE_IMPROVEMENT_ANALYSIS.md  DEPLOYMENT.md  DEPLOYMENT_PROGRESS.md  DEPLOY_COOLIFY.md  DJANGO_TENANT_MANAGEMENT.md  DOCKER_CLEANUP_SUMMARY.md  DOKPLOY.md  DOKPLOY_SETUP.md  Dockerfile  ESSENTIAL_FIXES.md  FINAL_TEST_REPORT.md  IMPLEMENTATION_PLAN.md  IMPORT_PROCESS.md  IMPROVEMENT_ROADMAP.md  Makefile  OFFICIAL_DOKPLOY_PRODUCTION.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_DEPLOYMENT_GUIDE.md  QUICK_START_PRODUCTION.md  README.md  RECOMMENDED_ARCHITECTURE.md  SYSTEM_TEST_RESULTS.md  (+55 more)
.config/: Caddyfile  supervisord.conf
.dokploy/: README.md  deploy.sh  docker-compose.yml
backups/: backup_20250915_140846.json  backup_20250915_140846.metadata.json  baseline.sql  baseline_20250915_121922.metadata.json  baseline_20250915_141240.json  baseline_20250915_141240.metadata.json  baseline_20250915_141323.json  baseline_20250915_141323.metadata.json  localprod-20250912_093523.sql
baselineData/: baseline.sql
claude-tests/: ACCESSIBILITY_COMPLIANCE_REPORT.md  BACKUP_SYSTEM_DOCUMENTATION.md  COMPREHENSIVE_PRODUCTION_TEST_REPORT.md  FINAL_SUMMARY.md  MIGRATION_TEST_SUMMARY.md  PRODUCTION_TEST_SUMMARY.json  README.md  accessibility_config.py  accessibility_report.json  accessibility_validator.py  conftest.py  debug_desktop_nav.py  debug_links.py  debug_preline.py  flowbite_migration_static_analysis.json  flowbite_production_test_report.json  flowbite_test_demo.html  header_functionality_test.py  header_test_results.json  mega_menu_header_tests.py  mega_menu_test_results.json  run_migration_tests.py  test_accessibility.py  test_accessibility_basic.py  test_accessibility_features.py  test_admin_enhancements.py  test_backup_restore_system.py  test_component_functionality.py  test_component_rendering.py  test_contact_forms.py  test_deployment_basic.py  test_deployment_secret_key.py  test_error_handling.py  test_flowbite_migration.py  test_load_baseline_fix.py  test_migration_accessibility.py  test_performance.py  (+12 more)
(+386 files in other folders)
