[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kni-webapp"
version = "1.0.0"
description = "KNI Django/Wagtail Web Application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=4.2,<5.1",
    "wagtail>=7.1,<7.2",
    "psycopg2-binary>=2.9",
    "Pillow>=10.0",
    "django-taggit>=4.0",
    "python-dotenv>=1.0",
    "whitenoise>=6.6",
    "django-storages>=1.14",
    "boto3>=1.28",
    "django-htmx>=1.17",
    "wagtail-seo>=2.5",
    "beautifulsoup4>=4.12",
    "gunicorn>=21.2",
    "redis>=5.0",
    "django-redis>=5.4",
    "python-json-logger>=2.0",
    "wagtail-cache>=2.1",
]

[project.optional-dependencies]
dev = [
    "ipdb",
    "django-debug-toolbar",
    "django-extensions",
    "watchdog",
    "pytest",
    "pytest-django",
    "pytest-cov",
]
test = [
    "pytest",
    "pytest-django",
    "pytest-cov",
    "factory-boy",
]

[tool.setuptools]
packages = ["apps", "project"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "project.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
python_classes = ["Test*", "*Test", "*Tests"]
python_functions = ["test_*"]
addopts = "--cov=apps --cov=project --cov-report=html --cov-report=term-missing"

[tool.coverage.run]
source = ["apps", "project"]
omit = [
    "*/migrations/*",
    "*/venv/*",
    "*/env/*",
    "manage.py",
    "*/settings/*",
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"settings/*.py" = ["F405", "F403"]

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''